Fixed issue with display modal window on Iphone SE/6/7/8

--- a/mobile.css
+++ b/mobile.css
@@ -45,7 +45,6 @@
 
     .modal-container {
         width: 275px;
-        height: 700px;
     }
 
     .ok-modal svg {
